# deepdiff-mcp

./: LICENSE  README.md  README_CLIENTS.md  install.sh  pyproject.toml
examples/: client_example.py  compare_files_example.py  server_example.py  simple_file_comparison.py
src/deepdiff_mcp/: __init__.py  __main__.py  cli.py  file_utils.py  server.py
tests/: conftest.py  test_server.py
