[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepdiff-mcp"
version = "0.1.0"
description = "MCP server for DeepDiff library"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Admin H100" },
]

dependencies = [
    "deepdiff>=8.5.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.267",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deepdiff_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[project.scripts]
deepdiff-mcp = "deepdiff_mcp.cli:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
